<resources>
    <string name="app_name">Υπολογισμός Μορίων</string>
    <string name="vaseis_sxolwn">ΒΑΣΕΙΣ ΣΧΟΛΩΝ</string>
    <string name="saved_moria">ΑΠΟΘΗΚΕΥΜΕΝΑ ΜΟΡΙΑ</string>
    <string name="about_tuitor">ΠΕΡΙ TUITOR</string>
    <string name="text_ypologismos_moriwn">ΥΠΟΛΟΓΙΣΜΟΣ ΜΟΡΙΩΝ</string>
    <string name="text_anthropistikwn_spoudwn">Ανθρωπιστικών Σπουδών</string>
    <string name="text_thetikwn_epistimwn">Θετικών Σπουδών</string>
    <string name="text_oikonomias_pliroforikis">Οικονομίας / Πληροφορικής</string>
    <string name="text_pempto_mathima">5ο Μάθημα</string>
    <string name="text_eidiko_mathima">Ειδικό Μάθημα</string>
    <string name="text_latinika_anthropistikwn">Λατινικά</string>
    <string name="text_mathimatika_anthropistikwn">Μαθηματικά Γενικής</string>
    <string name="text_ekthesi_anthropistikwn">Έκθεση</string>
    <string name="text_arxaia_anthropistikwn">Αρχαία</string>
    <string name="text_istoria_anthropistikwn">Ιστορία</string>
    <string name="text_fysiki_thetikwn">Φυσική</string>
    <string name="text_ximeia_thetikwn">Χημεία</string>
    <string name="text_mathimatika_oikonomias">Μαθηματικά</string>
    <string name="text_aepp_oikonomias">Α.Ε.Π.Π.</string>
    <string name="text_viologia_anthropistikwn">Βιολογία Γενικής</string>
    <string name="dialekse_prosanatolismo">Προσανατολισμός</string>
    <string name="dialekse_tetarto_mathima">Διάλεξε 4ο Μάθημα</string>
    <string name="dialekse_pempto_mathima">Διάλεξε 5ο Μάθημα</string>
    <string name="dialekse_syntelesti">Συντελεστής Ειδικού Μαθήματος</string>
    <string name="text_syntelestis_1x">1x</string>
    <string name="text_syntelestis_2x">2x</string>
    <string name="text_mathimatika_thetikwn">Μαθηματικά</string>
    <string name="text_viologia_thetikwn">Βιολογία</string>
    <string name="text_istoria_thetikwn">Ιστορία ΓΠ</string>
    <string name="text_aoth_oikonomias">Α.Ο.Θ.</string>
    <string name="text_viologia_oikonomias">Βιολογία ΓΠ</string>
    <string name="pemtpo_mathima_toast">Δεν γίνεται να διαλέξετε το ίδιο μάθημα</string>
    <string name="text_ypologismos_button">ΕΠΟΜΕΝΟ</string>
    <string name="moriodotisi_title_hint">Δώσε έναν τίτλο για την παρούσα μοριοδότηση</string>
    <string name="vathmoi_title">ΕΙΣΑΓΕΤΕ ΤΟΥΣ ΒΑΘΜΟΥΣ</string>
    <string name="pedio_1o_titlos">ΑΝΘΡΩΠΙΣΤΙΚΩΝ - ΝΟΜΙΚΩΝ ΚΑΙ ΚΟΙΝΩΝΙΚΩΝ ΕΠΙΣΤΗΜΩΝ </string>
    <string name="pedio_2o_titlos">ΘΕΤΙΚΩΝ ΕΠΙΣΤΗΜΩΝ</string>
    <string name="pedio_3o_titlos">ΕΠΙΣΤΗΜΩΝ ΥΓΕΙΑΣ</string>
    <string name="pedio_4o_titlos">ΤΕΧΝΟΛΟΓΙΚΩΝ ΕΠΙΣΤΗΜΩΝ</string>
    <string name="pedio_5o_titlos">ΕΠΙΣΤΗΜΩΝ ΟΙΚΟΝΟΜΙΑΣ ΚΑΙ ΔΙΟΙΚΗΣΗΣ</string>
    <string name="moria_eidikou_titlos">ΜΟΡΙΑ ΕΙΔΙΚΟΥ ΜΑΘΗΜΑΤΟΣ</string>
    <string name="pedio_eidiko_titlos">Ειδικό Μάθημα</string>
    <string name="deite_ta_moria">ΔΕΙΤΕ ΤΑ ΜΟΡΙΑ ΣΑΣ</string>
    <string name="text_save_button">ΑΠΟΘΗΚΕΥΣΗ</string>
</resources>
