<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_home"
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center"
        tools:context="palmosanalysis.android.ypologismosmoriwn.HomeActivity">

        <ImageView android:id="@+id/home_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:src="@drawable/tuitor_social_icon"/>

        <Button android:id="@+id/ypologismos_moriwn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="12dp"
            android:layout_margin="12dp"
            android:layout_marginTop="24dp"
            android:textSize="16dp"
            android:textColor="#F5F5F5"
            android:background="@drawable/button_ypologise"
            android:text="@string/text_ypologismos_moriwn"/>
        <Button android:id="@+id/vaseis_sxolwn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="12dp"
                android:layout_margin="12dp"
                android:textSize="16dp"
                android:textColor="#F5F5F5"
                android:background="@drawable/button_vaseis"
                android:text="@string/vaseis_sxolwn"/>
        <Button android:id="@+id/saved_moria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="12dp"
                android:layout_margin="12dp"
                android:textSize="16dp"
                android:textColor="#F5F5F5"
                android:background="@drawable/button_apothikeymena"
                android:text="@string/saved_moria"
                android:visibility="gone"/>
        <Button android:id="@+id/about_tuitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="12dp"
                android:layout_margin="12dp"
                android:background="@drawable/button_tuitor"
                android:textSize="16dp"
                android:textColor="#F5F5F5"
                android:text="@string/about_tuitor"/>

    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
    </LinearLayout>
</LinearLayout>
