<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/ypologismos_button"
            android:text="@string/text_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/button_ypologise"
            android:textSize="20dp"
            android:textColor="#F5F5F5"
            android:visibility="gone"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/buttons"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:id="@+id/pedio_1o"
                android:visibility="gone"
                android:background="@drawable/customborder"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/pedia_layout"
                    android:textColor="#ffffff"
                    android:text="@string/pedio_1o_titlos"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:padding="6dp"
                    android:textColor="#508850"
                    android:textStyle="bold"
                    android:background="@drawable/moria_pedia_layout"
                    android:layout_weight="3"
                    android:id="@+id/pedio_1o_moria"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:id="@+id/pedio_2o"
                android:visibility="gone"
                android:background="@drawable/customborder">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/pedia_layout"
                    android:textColor="#ffffff"
                    android:text="@string/pedio_2o_titlos"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:padding="6dp"
                    android:textColor="#508850"
                    android:textStyle="bold"
                    android:background="@drawable/moria_pedia_layout"
                    android:layout_weight="3"
                    android:id="@+id/pedio_2o_moria"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:id="@+id/pedio_3o"
                android:visibility="gone"
                android:background="@drawable/customborder">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/pedia_layout"
                    android:textColor="#ffffff"
                    android:text="@string/pedio_3o_titlos"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:padding="6dp"
                    android:textColor="#508850"
                    android:textStyle="bold"
                    android:background="@drawable/moria_pedia_layout"
                    android:layout_weight="3"
                    android:id="@+id/pedio_3o_moria"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:id="@+id/pedio_4o"
                android:visibility="gone"
                android:background="@drawable/customborder">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/pedia_layout"
                    android:textColor="#ffffff"
                    android:text="@string/pedio_4o_titlos"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:padding="6dp"
                    android:textColor="#508850"
                    android:textStyle="bold"
                    android:background="@drawable/moria_pedia_layout"
                    android:textAlignment="center"
                    android:layout_weight="3"
                    android:id="@+id/pedio_4o_moria"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:id="@+id/pedio_5o"
                android:visibility="gone"
                android:background="@drawable/customborder">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/pedia_layout"
                    android:textColor="#ffffff"
                    android:text="@string/pedio_5o_titlos"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:padding="6dp"
                    android:textColor="#508850"
                    android:textStyle="bold"
                    android:background="@drawable/moria_pedia_layout"
                    android:textAlignment="center"
                    android:layout_weight="3"
                    android:id="@+id/pedio_5o_moria"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:id="@+id/pedio_eidiko"
                android:visibility="gone"
                android:background="@drawable/customborder">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:padding="6dp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/pedia_layout"
                    android:textColor="#ffffff"
                    android:id="@+id/pedio_eidiko_titlos"
                    android:text="@string/moria_eidikou_titlos"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:padding="6dp"
                    android:textColor="#508850"
                    android:textStyle="bold"
                    android:background="@drawable/moria_pedia_layout"
                    android:textAlignment="center"
                    android:layout_weight="3"
                    android:id="@+id/pedio_eidiko_moria"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>