<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/ypologismos_button"
            android:text="@string/text_ypologismos_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:background="@drawable/button_ypologise"
            android:textColor="#F5F5F5"
            android:textSize="18dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/buttons"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView android:text="@string/vathmoi_title"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:textSize="18sp"
                      android:layout_marginBottom="10dp"
                      android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:background="@drawable/moria_layout">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="#F5F5F5"
                    android:id="@+id/mathima_1o_titlos"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:layout_weight="3"
                    android:textColor="#F5F5F5"
                    android:id="@+id/mathima_1o_vathmos"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="#F5F5F5"
                    android:id="@+id/mathima_2o_titlos"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:textColor="#F5F5F5"
                    android:layout_weight="3"
                    android:id="@+id/mathima_2o_vathmos"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="#F5F5F5"
                    android:id="@+id/mathima_3o_titlos"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:textColor="#F5F5F5"
                    android:layout_weight="3"
                    android:id="@+id/mathima_3o_vathmos"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="#F5F5F5"
                    android:id="@+id/mathima_4o_titlos"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:textColor="#F5F5F5"
                    android:layout_weight="3"
                    android:id="@+id/mathima_4o_vathmos"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/grammi_5ou_mathimatos"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:paddingRight="20dp"
                          android:paddingLeft="20dp"
                          android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="#F5F5F5"
                    android:id="@+id/mathima_5o_titlos"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:textColor="#F5F5F5"
                    android:layout_weight="3"
                    android:id="@+id/mathima_5o_vathmos"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/grammi_eidikou_mathimatos"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:paddingRight="20dp"
                          android:paddingLeft="20dp"
                          android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="#F5F5F5"
                    android:id="@+id/eidiko_mathima_titlos"
                    android:text="@string/pedio_eidiko_titlos"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:textColor="#F5F5F5"
                    android:layout_weight="3"
                    android:id="@+id/eidiko_mathima_vathmos"/>
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>